tests/errors/refs/006.ura
// errors/refs/006 — cannot reference an undeclared variable

main():
    ref r int = ref ghost
    return 0